--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ACCSBID Website</title>
+    <title>ACCSBID — Secure Account Marketplace</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            padding: 20px;
+            text-align: center;
+        }
+        .box {
+            background: white;
+            padding: 20px;
+            max-width: 500px;
+            margin: auto;
+            border-radius: 10px;
+            box-shadow: 0 0 10px #ccc;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 6px;
+            border: none;
+            background: #0056ff;
+            color: white;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Welcome to ACCSBID</h1>
-    <p>Your backend server is running successfully!</p>
+    <div class="box">
+        <h1>Welcome to ACCSBID</h1>
+        <p>Your secure social-media account marketplace.</p>
 
-    <p>Click to test API:</p>
-    <button onclick="testApi()">Test Server</button>
+        <h2>Test Your Backend</h2>
+        <p>Click to verify that your Render server is working.</p>
 
-    <p id="result"></p>
+        <button onclick="testApi()">Test Server</button>
+
+        <p id="result"></p>
+    </div>
 
     <script>
         function testApi() {
             fetch('/api/test')
                 .then(res => res.text())
-                .then(data => document.getElementById('result').innerText = data)
+                .then(data => {
+                    document.getElementById("result").innerText = data;
+                })
                 .catch(err => alert("Error: " + err));
         }
     </script>
 </body>
 </html>
-
